# ai-tutor-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  config.yaml  pyproject.toml  smoke_test.py
backend/src/: main.py
backend/src/api/: deps.py  health.py  progress.py  settings.py  tutor.py
backend/src/config/: settings.py
backend/src/data/: supabase.py
backend/src/graph/: edges.py  graph.py  state.py
backend/src/graph/decorators/: exam_mode.py  registry.py  socratic_mode.py  strict_pacing.py
backend/src/graph/nodes/: chat.py  evaluator.py  intent_classifier.py  knowledge_feed.py  planner.py
backend/src/integrations/: base.py  registry.py
backend/src/integrations/mcp/: __init__.py  client.py
backend/src/integrations/notifier/: __init__.py  discord.py  email.py
backend/src/llm/: circuit_breaker.py  factory.py
backend/src/llm/providers/: anthropic_provider.py  azure_openai_provider.py  base.py  google_provider.py  llamacpp.py  ollama_provider.py  openai_provider.py
docs/: PROJECT_OVERVIEW.md
frontend/: package.json  tsconfig.json
frontend/src/: index.html
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: tutor.models.ts
frontend/src/app/core/services/: auth.service.ts  tutor.service.ts
frontend/src/app/features/dashboard/: dashboard.component.ts
frontend/src/app/features/settings/: settings.component.ts
frontend/src/app/features/tutor/: tutor.component.html  tutor.component.scss  tutor.component.ts
frontend/src/app/shared/components/message-bubble/: message-bubble.component.ts
frontend/src/environments/: environment.ts
