[project]
name = "personal-ai-tutor"
version = "0.1.0"
description = "Production-grade personal AI tutor agent — LangGraph + FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",

    # ── LangGraph & LangChain ──────────────────────────────────────────────
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=0.1",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",        # ChatLlamaCpp lives here
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.2",

    # ── MCP integration ────────────────────────────────────────────────────
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.0",

    # LlamaCpp — local LLM (optional; compile with GPU flags for best perf)
    # macOS Metal:  CMAKE_ARGS="-DLLAMA_METAL=on"   uv add llama-cpp-python
    # CUDA:         CMAKE_ARGS="-DLLAMA_CUDA=on"    uv add llama-cpp-python
    # CPU only:     uv add llama-cpp-python
    # Omitted from default deps — install manually per your hardware.

    # ── Data / Persistence ─────────────────────────────────────────────────
    "supabase>=2.0",
    "asyncpg>=0.29",

    # ── Notifications ──────────────────────────────────────────────────────
    "sendgrid>=6.11",
    "httpx>=0.27",

    # ── Config & validation ────────────────────────────────────────────────
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # ── Auth ───────────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3",

    # ── Resilience ─────────────────────────────────────────────────────────
    "tenacity>=8.3",

    # ── Observability ──────────────────────────────────────────────────────
    "structlog>=24.2",
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff linter ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["B008"]   # FastAPI Depends() pattern

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── Run commands (use with: uv run <command>) ────────────────────────────────
# uv run uvicorn src.main:app --reload --host 0.0.0.0 --port 8000   (dev)
# uv run uvicorn src.main:app --host 0.0.0.0 --port 8000 --workers 4  (prod)
# uv run pytest
# uv run ruff check src tests
# uv run ruff format src tests
# uv run mypy src
